logs/pyhdust.log
Listing '.'...
Listing './bin'...
Compiling './bin/extract3Dfits.py'...
Compiling './bin/extract_ms_opera.py'...
***   File "./bin/extract_ms_opera.py", line 59
    print opsps
              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/hdcompact.py'...
Compiling './bin/norm_spec.py'...
Compiling './bin/plot_spec.py'...
Compiling './bin/shift_spec.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/numpy'...
Listing './lib/python3.5/site-packages/numpy/.libs'...
Listing './lib/python3.5/site-packages/numpy/compat'...
Listing './lib/python3.5/site-packages/numpy/core'...
Listing './lib/python3.5/site-packages/numpy/core/include'...
Listing './lib/python3.5/site-packages/numpy/core/include/numpy'...
Listing './lib/python3.5/site-packages/numpy/core/lib'...
Listing './lib/python3.5/site-packages/numpy/core/lib/npy-pkg-config'...
Listing './lib/python3.5/site-packages/numpy/core/tests'...
Listing './lib/python3.5/site-packages/numpy/core/tests/data'...
Listing './lib/python3.5/site-packages/numpy/distutils'...
Listing './lib/python3.5/site-packages/numpy/distutils/command'...
Listing './lib/python3.5/site-packages/numpy/distutils/fcompiler'...
Listing './lib/python3.5/site-packages/numpy/distutils/mingw'...
Listing './lib/python3.5/site-packages/numpy/distutils/tests'...
Listing './lib/python3.5/site-packages/numpy/doc'...
Listing './lib/python3.5/site-packages/numpy/f2py'...
Listing './lib/python3.5/site-packages/numpy/f2py/src'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/array_from_pyobj'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/assumed_shape'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/common'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/kind'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/mixed'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/parameter'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/regression'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/size'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/string'...
Listing './lib/python3.5/site-packages/numpy/fft'...
Listing './lib/python3.5/site-packages/numpy/fft/tests'...
Listing './lib/python3.5/site-packages/numpy/lib'...
Listing './lib/python3.5/site-packages/numpy/lib/tests'...
Listing './lib/python3.5/site-packages/numpy/lib/tests/data'...
Listing './lib/python3.5/site-packages/numpy/linalg'...
Listing './lib/python3.5/site-packages/numpy/linalg/tests'...
Listing './lib/python3.5/site-packages/numpy/ma'...
Listing './lib/python3.5/site-packages/numpy/ma/tests'...
Listing './lib/python3.5/site-packages/numpy/matrixlib'...
Listing './lib/python3.5/site-packages/numpy/matrixlib/tests'...
Listing './lib/python3.5/site-packages/numpy/polynomial'...
Listing './lib/python3.5/site-packages/numpy/polynomial/tests'...
Listing './lib/python3.5/site-packages/numpy/random'...
Listing './lib/python3.5/site-packages/numpy/random/tests'...
Listing './lib/python3.5/site-packages/numpy/testing'...
Listing './lib/python3.5/site-packages/numpy/testing/nose_tools'...
Listing './lib/python3.5/site-packages/numpy/testing/tests'...
Listing './lib/python3.5/site-packages/numpy/tests'...
Listing './lib/python3.5/site-packages/numpy-1.14.0.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyhdust'...
Listing './lib/python3.5/site-packages/pyhdust/refs'...
Listing './lib/python3.5/site-packages/pyhdust/refs/extern'...
Compiling './lib/python3.5/site-packages/pyhdust/refs/extern/bcd.ori.py'...
***   File "./lib/python3.5/site-packages/pyhdust/refs/extern/bcd.ori.py", line 22
    print 'offset at %4.0fA = %5.3e'%(x0, offset)
                                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyhdust/refs/extern/oifits.ori.py'...
***   File "./lib/python3.5/site-packages/pyhdust/refs/extern/oifits.ori.py", line 196
    print str(self)
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyhdust/refs/extern/oitools.py'...
***   File "./lib/python3.5/site-packages/pyhdust/refs/extern/oitools.py", line 249
    print B, pa
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pyhdust/refs/filters'...
Listing './lib/python3.5/site-packages/pyhdust/refs/newmod'...
Listing './lib/python3.5/site-packages/pyhdust/refs/newmod/composition'...
Listing './lib/python3.5/site-packages/pyhdust/refs/newmod/controls'...
Listing './lib/python3.5/site-packages/pyhdust/refs/newmod/gridcells'...
Listing './lib/python3.5/site-packages/pyhdust/refs/newmod/images'...
Listing './lib/python3.5/site-packages/pyhdust/refs/newmod/observers'...
Listing './lib/python3.5/site-packages/pyhdust/refs/newmod/perturbations'...
Listing './lib/python3.5/site-packages/pyhdust/refs/newmod/simulation'...
Listing './lib/python3.5/site-packages/pyhdust/refs/newmod/source'...
Listing './lib/python3.5/site-packages/pyhdust/refs/opd'...
Listing './lib/python3.5/site-packages/pyhdust/refs/repo'...
Listing './lib/python3.5/site-packages/pyhdust/refs/stars'...
Listing './lib/python3.5/site-packages/pyhdust/refs/stmodels'...
Listing './lib/python3.5/site-packages/pyhdust-1.3.1.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
